[gd_scene load_steps=2 format=3 uid="uid://cj2ydkbum3isy"]

[ext_resource type="Script" uid="uid://bqgge55grhe8h" path="res://scripts/main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 329.0
offset_right = 743.0
offset_bottom = 402.0
text = "Start
"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 35.0
grow_horizontal = 2

[node name="MenuBar" type="MenuBar" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="File" type="PopupMenu" parent="Panel/MenuBar"]
oversampling_override = 1.0
item_count = 1
item_0/text = "Exit"
item_0/id = 0

[node name="About" type="PopupMenu" parent="Panel/MenuBar"]
item_count = 2
item_0/text = "Credits"
item_0/id = 0
item_1/text = "Attribution"
item_1/id = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="id_pressed" from="Panel/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="id_pressed" from="Panel/MenuBar/About" to="." method="_on_about_id_pressed"]
